str_time_to_secs was mucking the mday

--- a/config.h.example
+++ b/config.h.example
@@ -29,3 +29,9 @@
  */
 
 #define GURL "http://maps.googleapis.com/maps/api/geocode/json?latlng=%lf,%lf&sensor=false&language=EN"
+
+/*
+ * How many hours back should `ocat' display data by default
+ */
+
+#DEFAULT_HISTORY_HOURS 6
