config.h: make JSON output indentable (or not)

--- a/config.h.example
+++ b/config.h.example
@@ -27,3 +27,10 @@
  */
 
 #define DEFAULT_HISTORY_HOURS 6
+
+/*
+ * Indented JSON or not? Choose.
+ */
+
+#define JSON_INDENT	" "	/* indented */
+// #define JSON_INDENT	NULL	/* not indented */
