--- a/config.mk.in
+++ b/config.mk.in
@@ -2,6 +2,8 @@
 HAVE_HTTP ?= yes
 HAVE_LMDB ?= yes
 
+STORAGEDEFAULT = "./store"
+
 # Optionally specify the path to the Mosquitto libs, include here
 MOSQUITTO_INC = -I/usr/include
 MOSQUITTO_LIB = -L/usr/lib
