move JSON_INDENT to config.mk

--- a/config.mk.in
+++ b/config.mk.in
@@ -25,3 +25,6 @@ MOSQUITTO_LIB = -L/usr/lib
 
 GHASHPREC = 7
 
+# Should the JSON emitted by recorder be indented? (i.e. beautified)
+# yes or no
+JSON_INDENT ?= yes
