--- a/config.mk.in
+++ b/config.mk.in
@@ -15,6 +15,9 @@ HAVE_PING ?= yes
 # exist and be writeable by recorder (and readable by ocat)
 STORAGEDEFAULT = "/var/spool/owntracks/recorder/store"
 
+# Where should the recorder find its document root (HTTP)?
+DOCROOT = "/var/spool/owntracks/recorder/wdocs"
+
 # Define the precision for reverse-geo lookups. The higher
 # the number, the more granular reverse-geo will be:
 #
