--- a/config.mk.in
+++ b/config.mk.in
@@ -50,4 +50,4 @@ APIKEY ?=
 # Optionally specify the path to the Mosquitto libs, include here
 MOSQUITTO_INC = -I/usr/include
 MOSQUITTO_LIB = -L/usr/lib
-
+MORELIBS = # -lssl
