--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
 - sudo apt-get update -qq
 - apt-cache search mosquitto
 - sudo apt-get install -qq libmosquitto-dev
-install:
+script:
 - cp config.mk.in config.mk
 - make
 - ./ocat -v
