--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: c
 compiler: gcc
 before_install:
+# Fix apt preferences for libconfig
+- "sudo echo Package: libconfig* >> /etc/apt/preferences"
+- "sudo echo Pin: release n=quantal* >> /etc/apt/preferences"
+- "sudo echo Pin-Priority: 990 >> /etc/apt/preferences"
+- sudo apt-get dist-upgrade
 - sudo add-apt-repository ppa:mosquitto-dev/mosquitto-ppa -y
 - sudo apt-get update -qq
 - apt-cache search mosquitto
