--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
 - "echo 'Package: libconfig*' | sudo tee -a /etc/apt/preferences"
 - "echo 'Pin: release n=quantal*' | sudo tee -a /etc/apt/preferences"
 - "echo 'Pin-Priority: 990' | sudo tee -a /etc/apt/preferences"
-- sudo apt-get --fix-missing dist-upgrade
+- sudo apt-get -qq --fix-missing dist-upgrade
 - sudo add-apt-repository ppa:mosquitto-dev/mosquitto-ppa -y
 - sudo apt-get update -qq
 - apt-cache search mosquitto
