--- a/etc/ot-recorder.service
+++ b/etc/ot-recorder.service
@@ -1,20 +1,20 @@
 # /etc/systemd/system/ot-recorder.service
 #	systemctl enable ot-recorder
 #	systemctl start ot-recorder
+#	systemctl --system daemon-reload
 #	journalctl -f
 [Unit]
 Description=OwnTracks Recorder
 
 [Service]
 Type=simple
-# User=
-Group=owntracks
+User=owntracks
 WorkingDirectory=/
-Environment='OTR_HOST=127.0.0.1'
-# Environment='OTR_USER=xxx'
-ExecStart=/usr/local/sbin/ot-recorder "owntracks/#"
+# deprecated: use config file
+# 	Environment='OTR_USER=xxx'
+ExecStart=/usr/local/sbin/ot-recorder
 Restart=always
-RestartSec=15
+RestartSec=60
 StandardOutput=null
 StandardError=syslog
 SyslogIdentifier=ot-recorder
