--- a/config.mk.in
+++ b/config.mk.in
@@ -6,7 +6,7 @@
 #       cd /usr/ports/devel/libconfig; make config; make install clean
 #
 # CC      = clang
-# MDBFLAGS = -DMDB_DSYNC=O_SYNC
+# MDBFLAGS = -DMDB_DSYNC=O_SYNC -Dfdatasync=fsync
 # CFLAGS += $(MDBFLAGS) -I/usr/local/include
 # MORELIBS += -L /usr/local/lib
 # -- end FreeBSD
