add native Debian packaging

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@ codesign.sh
 sundry/
 *.lua
 kick*.sh
+/debian/*\.debhelper
+/debian/*\.debhelper.log
+/debian/debhelper.log
+/debian/*\.substvars
+/debian/files
