--- a/etc/debian/config.mk.in
+++ b/etc/debian/config.mk.in
@@ -1,7 +1,7 @@
 #(@)config.mk for Debian 8 (x86_64)
 
 INSTALLDIR = /usr/
-CONFIGFILE = /etc/ot-recorder/ot-recorder.conf
+CONFIGFILE = /etc/default/ot-recorder
 
 WITH_MQTT ?= yes
 WITH_HTTP ?= yes
