postinstall centos service

--- a/etc/ot-recorder.service
+++ b/etc/ot-recorder.service
@@ -3,6 +3,12 @@
 #	systemctl start ot-recorder
 #	systemctl --system daemon-reload
 #	journalctl -f
+#
+# Centos
+#       install -m644 /usr/share/doc/ot-recorder/ot-recorder.service \
+#			/usr/lib/systemd/system/ot-recorder.service
+#       systemctl --system daemon-reload
+#
 [Unit]
 Description=OwnTracks Recorder
 
