Pass the standard MQTT topic in the systemd unit
Add the standard OwnTracks MQTT topic as the first argument to
`ot-recorder` in the service file. This provides a usable experience out
of the box (otherwise the service file will fail with a help message).

--- a/etc/ot-recorder.service
+++ b/etc/ot-recorder.service
@@ -16,7 +16,7 @@ Description=OwnTracks Recorder
 Type=simple
 User=owntracks
 WorkingDirectory=/
-ExecStart=/usr/sbin/ot-recorder
+ExecStart=/usr/sbin/ot-recorder 'owntracks/+/+'
 
 [Install]
 WantedBy=multi-user.target
