--- a/etc/debian/config.mk.in
+++ b/etc/debian/config.mk.in
@@ -7,7 +7,7 @@ WITH_MQTT ?= yes
 WITH_HTTP ?= yes
 WITH_LUA ?= yes
 WITH_PING ?= yes
-WITH_KILL ?= no
+WITH_KILL ?= yes
 WITH_ENCRYPT ?= yes
 WITH_GREENWICH ?= yes
 
