FIX inaccurate logo name in manifest and missing image 	addresses #372

--- a/docroot/last/manifest.json
+++ b/docroot/last/manifest.json
@@ -2,7 +2,7 @@
   "name" : "Recorder map",
   "icons" : [
   	{
-		"src" : "pista-micro.png",
+		"src" : "recorder-logo-192.png",
 		"sizes" : "192x192",
 		"type" : "image/png",
 		"density" : "4.0"
