--- a/docroot/last/manifest.json
+++ b/docroot/last/manifest.json
@@ -1,14 +1,14 @@
 {
-  "name" : "Recorder map",
-  "icons" : [
+  "name": "Recorder map",
+  "icons": [
   	{
-		"src" : "recorder-logo-192.png",
-		"sizes" : "192x192",
-		"type" : "image/png",
-		"density" : "4.0"
-	}
+      "src": "../static/recorder.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "density": "4.0"
+    }
   ],
-  "start_url" : "index.html",
-  "display" : "standalone",
-  "orientation" : "portrait"
+  "start_url": "index.html",
+  "display": "standalone",
+  "orientation": "portrait"
 }
