--- a/etc/debian/config.mk.in
+++ b/etc/debian/config.mk.in
@@ -1,4 +1,4 @@
-#(@)config.mk for Debian 8 (x86_64)
+#(@)config.mk for Debian 8-11 (x86_64, aarch64, armhf)
 
 INSTALLDIR = /usr/
 CONFIGFILE = /etc/default/ot-recorder
@@ -19,8 +19,8 @@ JSON_INDENT ?= no
 MOSQUITTO_INC = -I/usr/include
 MOSQUITTO_LIB = -L/usr/lib
 MORELIBS = # -lssl
-LUA_CFLAGS = `pkg-config --cflags lua5.2`
-LUA_LIBS   = `pkg-config --libs lua5.2`
+LUA_CFLAGS = `pkg-config --cflags lua`
+LUA_LIBS   = `pkg-config --libs lua`
 SODIUM_CFLAGS = `pkg-config --cflags libsodium`
 SODIUM_LIBS   = `pkg-config --libs libsodium`
 
