--- a/config.mk.in
+++ b/config.mk.in
@@ -40,7 +40,7 @@ WITH_MQTT ?= yes
 WITH_HTTP ?= yes
 
 # Do you want recorder support for shared views? Requires WITH_HTTP
-WITH_SHARES ?= no
+WITH_TOURS ?= no
 
 # Do you have Lua libraries installed and want the Lua hook integration?
 WITH_LUA ?= no
