NEW: WITH_TOURS is configured in by default

--- a/config.mk.in
+++ b/config.mk.in
@@ -40,7 +40,8 @@ WITH_MQTT ?= yes
 WITH_HTTP ?= yes
 
 # Do you want recorder support for shared views? Requires WITH_HTTP
-WITH_TOURS ?= no
+# also requires -luuid on Linux (see below at MORELIBS)
+WITH_TOURS ?= yes
 
 # Do you have Lua libraries installed and want the Lua hook integration?
 WITH_LUA ?= no
@@ -91,7 +92,10 @@ CONFIGFILE = /etc/default/ot-recorder
 # Optionally specify the path to the Mosquitto libs, include here
 MOSQUITTO_INC = -I/usr/include
 MOSQUITTO_LIB = -L/usr/lib
-MORELIBS += # -luuid -lssl
+
+# Debian requires uuid-dev
+# RHEL/CentOS needs libuuid-devel
+MORELIBS += -luuid # -lssl
 
 # Milliseconds (ms) timeout for reverse geocoding
 GEOCODE_TIMEOUT = 4000
