--- a/etc/raspbian/config.mk.in
+++ b/etc/raspbian/config.mk.in
@@ -7,6 +7,7 @@ FREEBSD ?= no
 
 WITH_MQTT ?= yes
 WITH_HTTP ?= yes
+WITH_TOURS ?= yes
 WITH_LUA ?= yes
 WITH_PING ?= yes
 WITH_KILL ?= yes
@@ -19,7 +20,7 @@ GHASHPREC = 7
 JSON_INDENT ?= no
 MOSQUITTO_INC = -I/usr/include
 MOSQUITTO_LIB = -L/usr/lib
-MORELIBS = 
+MORELIBS = -luuid
 
 LUA_CFLAGS = -I/usr/include/lua5.2 -llua5.2
 LUA_LIBS   = -L /usr/lib/arm-linux-gnueabihf/
