--- a/etc/centos/config.mk.in
+++ b/etc/centos/config.mk.in
@@ -6,6 +6,7 @@ FREEBSD ?= no
 
 WITH_MQTT ?= yes
 WITH_HTTP ?= yes
+WITH_TOURS ?= yes
 WITH_LUA ?= yes
 WITH_PING ?= yes
 WITH_KILL ?= yes
@@ -18,7 +19,7 @@ GHASHPREC = 7
 JSON_INDENT ?= no
 MOSQUITTO_INC = -I/usr/include
 MOSQUITTO_LIB = -L/usr/lib
-MORELIBS = # -lssl
+MORELIBS = -luuid # -lssl
 LUA_CFLAGS = `pkg-config --cflags lua`
 LUA_LIBS   = `pkg-config --libs lua`
 
