add TZDATADB 	addresses https://github.com/owntracks/docker-recorder/issues/73

--- a/config.mk.in
+++ b/config.mk.in
@@ -68,6 +68,10 @@ STORAGEDEFAULT = /var/spool/owntracks/recorder/store
 # Where should the recorder find its document root (HTTP)?
 DOCROOT = /var/spool/owntracks/recorder/htdocs
 
+# Where will the recorder find the TZ data file?
+TZDATADB = /usr/share/owntracks/recorder/timezone16.bin
+
+
 # Define the precision for reverse-geo lookups. The higher
 # the number, the more granular reverse-geo will be:
 #
