--- a/etc/debian/config.mk.in
+++ b/etc/debian/config.mk.in
@@ -12,6 +12,7 @@ WITH_PING ?= yes
 WITH_KILL ?= yes
 WITH_ENCRYPT ?= yes
 WITH_GREENWICH ?= yes
+WITH_TZ ?= yes
 
 STORAGEDEFAULT = /var/spool/owntracks/recorder/store
 DOCROOT = /usr/share/owntracks/recorder/htdocs
